--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
@@ -18,6 +20,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.554.0",
+    "mime": "^4.1.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/node": "^24.10.1",
     "babel-plugin-react-compiler": "1.0.0",
     "drizzle-kit": "^0.31.7",
     "tailwindcss": "^4",
